--- a/cjaasBrowserSDK/package.json
+++ b/cjaasBrowserSDK/package.json
@@ -13,20 +13,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@cjaas/common-components": "file:../../cjaas-common-components",
+    "@cjaas/common-components": "4.0.1",
     "@segment/analytics.js-core": "4.0.1",
     "@segment/analytics.js-integration": "^3.3.2",
     "axios": "^0.21.0",
     "cloudevents": "^3.2.0",
+    "live-server": "^1.2.1",
     "lodash.camelcase": "^4.3.0",
     "webpack": "^4.30.0"
+    
   },
   "devDependencies": {
-    "@momentum-ui/core": "^19.9.12",
-    "@momentum-ui/icons": "^7.54.0",
-    "@momentum-ui/tokens": "^1.5.0",
-    "@momentum-ui/utils": "^6.2.7",
-    "@momentum-ui/web-components": "^2.1.2",
+    "@momentum-ui/core": "19.15.4",
+    "@momentum-ui/icons": "8.21.0",
+    "@momentum-ui/tokens": "1.7.1",
+    "@momentum-ui/utils": "6.2.15",
+    "@momentum-ui/web-components": "2.4.7",
+    "lit-element": "2.3.1",
+    "lit-html": "1.2.1",
     "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash.camelcase": "^4.3.6",
@@ -39,8 +43,6 @@
     "karma-jasmine": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^4.0.2",
-    "lit-element": "2.3.1",
-    "lit-html": "1.2.1",
     "npm-force-resolutions": "0.0.3",
     "ts-loader": "^8.0.3",
     "typescript": "^4.0.2",
